<resources>
    <string name="app_name">RatTracker</string>

    <!-- Login Strings -->
    <string name="login_button_text">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="login_page_text">Please enter username (email) and password below to login</string>
    <string name="login_popup_text">The login information you entered was incorrect. Please try again.</string>
    <string name="popup_button_dismiss">Dismiss</string>
    <string name="popup_button_okay">Okay</string>
    <string name="login_popup_title">Error Logging In</string>
    <string name="emptyfield_error_message">Username and password must have entries. Please try again.</string>
    <string name="emptyfield_error_title">All fields must be filled!</string>
    <string name="login_success_title">Login Success!</string>
    <string name="login_success_message">You have successfully logged in to RatTracker.</string>

    <!-- Register Strings -->
    <string name="register_button_text">Sign Up</string>
    <string name="cancelRegistration_button_text">Cancel</string>
    <string name="register_page_text">Please enter username (email) and password below to sign up</string>
    <string name="register_popup_title">Error Registering</string>
    <string name="register_popup_text">The information entered is invalid. Email must be a valid email and password must be a minimum of 8 characters. Please try again.</string>
    <string name="register_success_title">Registration Success!</string>
    <string name="register_success_message">You have successfully registered for RatTracker.</string>
    <string name="register_need_radio_message">Please check if you want to be a user or admin.</string>

    <!-- Welcome Strings -->
    <string name="welcome_main_title">Welcome, U Dirty Rat</string>

    <!-- Main Strings -->
    <string name="logout_text">Logout</string>
    <string name="rat_report_text">View Rat Reports</string>
    <string name="title_activity_report_details">ReportDetailsActivity</string>

    <!-- Report Details Strings -->
    <string name="report_details">Report Details</string>
    <string name="title_activity_rat_map">Locate a Rat</string>

    <!-- Add Report Strings -->
    <string name="select_date">Enter Date</string>
    <string name="select_time">Enter Time</string>
    <string name="select_location_type">Select Location Type</string>
    <string name="input_address">Input Address</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="select_borough">Select Borough</string>
    <string name="add_report">Add Report</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_date">Invalid input: you must enter a date</string>
    <string name="invalid_time">Invalid input: you must enter a time</string>
    <string name="invalid_address">Invalid input: you must enter a address</string>

    <!-- Map Strings -->
    <string name="date_range_title">Select Date Range</string>
    <string name="date_range_info">To view rat sightings from just a single day, select the same date for both of the above boxes.</string>
    <string name="select_date_range">View sightings from this date range</string>
    <string name="valid_range_title">Invalid start date</string>
    <string name="valid_range_info">The start date cannot be after the end date.</string>

    <string-array name="boroughs">
        <item>Manhattan</item>
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>Queens</item>
        <item>Staten Island</item>
    </string-array>

    <string-array name="locTypes">
        <item>Vacant Lot</item>
        <item>Vacant Building</item>
        <item>Commercial Building</item>
        <item>Office Building</item>
        <item>School/Pre-School</item>
        <item>Day Care/Nursery</item>
        <item>Public Stairs</item>
        <item>Hospital</item>
        <item>Construction Site</item>
        <item>Parking Lot/Garage</item>
        <item>Catch Basin/Sewer</item>
        <item>Public Garden</item>
        <item>Government Building</item>
        <item>1&#8211;2 Family Dwelling</item>
        <item>3+ Family Apt. Building</item>
        <item>3+ Family Mixed Use Building</item>
        <item>Single Room Occupancy (SRO)</item>
        <item>Other</item>
    </string-array>


</resources>
